crates/python_parser/src/parser/tests/snapshots/python_parser__parser__tests__invalid_assignments__tests__ok_slice_weird.snap
---
source: crates/python_parser/src/parser/tests/invalid_assignments.rs
expression: ast
---
(
    [
        Assign(
            AssignStmt {
                range: 0..13,
                targets: [
                    Subscript(
                        SubscriptExpr {
                            range: 0..6,
                            value: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 0..1,
                                    value: Int(
                                        5,
                                    ),
                                },
                            ),
                            slice: Slice(
                                SliceExpr {
                                    range: 2..5,
                                    lower: Some(
                                        NumberLiteral(
                                            NumberLiteralExpr {
                                                range: 2..3,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    ),
                                    upper: Some(
                                        NumberLiteral(
                                            NumberLiteralExpr {
                                                range: 4..5,
                                                value: Int(
                                                    2,
                                                ),
                                            },
                                        ),
                                    ),
                                    step: None,
                                },
                            ),
                            ctx: Store,
                        },
                    ),
                ],
                value: List(
                    ListExpr {
                        range: 9..13,
                        elts: [
                            NumberLiteral(
                                NumberLiteralExpr {
                                    range: 10..12,
                                    value: Int(
                                        42,
                                    ),
                                },
                            ),
                        ],
                        ctx: Load,
                    },
                ),
            },
        ),
    ],
    [],
)
