crates/python_parser/src/parser/tests/snapshots/python_parser__parser__tests__invalid_assignments__tests__ok_starred.snap
---
source: crates/python_parser/src/parser/tests/invalid_assignments.rs
expression: ast
---
(
    [
        Assign(
            AssignStmt {
                range: 0..9,
                targets: [
                    Starred(
                        StarredExpr {
                            range: 0..4,
                            value: Name(
                                NameExpr {
                                    range: 1..4,
                                    id: "foo",
                                    ctx: Store,
                                },
                            ),
                            ctx: Store,
                        },
                    ),
                ],
                value: NumberLiteral(
                    NumberLiteralExpr {
                        range: 7..9,
                        value: Int(
                            42,
                        ),
                    },
                ),
            },
        ),
    ],
    [],
)
